--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-evtx==0.8.1
-lxml==4.8.0
-netaddr==0.8.0
-pandas==1.4.2
-python_dateutil==2.8.2
-pytz==2021.3
-PyYAML==6.0
+colorama==0.4.6
+evtx==0.8.3
+netaddr==0.9.0
+numpy==1.26.2
+pandas==2.1.3
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.13.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+six==1.16.0
+tzdata==2023.3
